<resources>
    <string name="app_name">GeekBrains_Calculator</string>
    <string name="hintForCalcEditText">Enter your arithmetic example</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button_9">9</string>
    <string name="button0">0</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMultiply">x</string>
    <string name="buttonDivide">/</string>
    <string name="buttonEqual">=</string>
    <string name="buttonPoint">.</string>
    <string name="switchTheme">Switch Theme</string>
    <string name="settings_for_calculator">Settings</string>
    <string name="settings">Settings</string>
    <string name="BackBtn">Back</string>
</resources>