<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                style="@style/BtnStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="putToEditTextNumber"
                android:text="@string/button1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/BtnStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="putToEditTextNumber"
                android:text="@string/button2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/BtnStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="putToEditTextNumber"
                android:text="@string/button3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPlus"
                style="@style/BtnStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="putToEditTextNumber"
                android:text="@string/buttonPlus" />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/button4"
                style="@style/BtnStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/button5"
                style="@style/BtnStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/button6"
                style="@style/BtnStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMinus"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/buttonMinus"
                style="@style/BtnStyle"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/button7"
                style="@style/BtnStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/button8"
                style="@style/BtnStyle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/button_9"
                style="@style/BtnStyle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMultiply"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/buttonMultiply"
                style="@style/BtnStyle"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/button0"
                style="@style/BtnStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDivide"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="putToEditTextNumber"
                android:text="@string/buttonDivide"
                style="@style/BtnStyle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="putToEditTextNumber"
                android:text="@string/buttonPoint"
                style="@style/BtnStyle"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:onClick="getResult"
                android:text="@string/buttonEqual"
                style="@style/BtnStyle"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

